# hr-hiring-signals

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docs.md  pyproject.toml  team-config.json
src/hr_alerter/: __init__.py  cli.py
src/hr_alerter/db/: __init__.py  manager.py  schema.sql
src/hr_alerter/pipelines/: daily_scrape.yaml  weekly_report.yaml
src/hr_alerter/reporting/: __init__.py  composer.py  sender.py
src/hr_alerter/reporting/templates/: weekly_report.html
src/hr_alerter/scoring/: __init__.py  composite.py  content.py  icp.py  recency.py  seniority.py  velocity.py
src/hr_alerter/scrapers/: __init__.py  base.py  nofluff.py  pracuj.py  utils.py
src/hr_alerter/steps/: db_init.py  generate_report.py  normalize_companies.py  score_companies.py  scrape_nofluff.py  scrape_pracuj.py  send_email.py  show_summary.py
tests/: conftest.py  test_cli.py  test_db.py  test_reporting.py  test_scoring.py  test_scrapers.py
